http://blog.elliottohara.com/2011/01/my-own-little-cqrs-framework-that-doesn.html

--- a/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
+++ b/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
@@ -40,7 +40,8 @@
     <Compile Include="Command\ICommand.cs" />
     <Compile Include="Command\ICommandExecutor.cs" />
     <Compile Include="Command\ICommandExecutorFactory.cs" />
-    <Compile Include="Configure.cs" />
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Config\Configure.cs" />
     <Compile Include="Event\DomainEvents.cs" />
     <Compile Include="Event\IDomainEvent.cs" />
     <Compile Include="Event\IDomainEventHandler.cs" />
