--- a/Extensions/Ellemy.CQRS.Implementations.StructureMap/Ellemy.CQRS.Implementations.StructureMap.csproj
+++ b/Extensions/Ellemy.CQRS.Implementations.StructureMap/Ellemy.CQRS.Implementations.StructureMap.csproj
@@ -53,6 +53,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if not exist  $(SolutionDir)\binaries\extensions\$(ProjectName) mkdir $(SolutionDir)\binaries\extensions\$(ProjectName)
+copy $(TargetDir)*   $(SolutionDir)\binaries\extensions\$(ProjectName)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
