--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Extensions\Ellemy.CQRS.Implementations.StructureMap\packages.config" />
+  <repository path="..\Source\Ellemy.Mvc\packages.config" />
 </repositories>
