--- a/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
+++ b/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Event\IEventPublisher.cs" />
     <Compile Include="Event\IHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\IQuery.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
