--- a/Tests/Ellemy.CQRS.UnitTests/Ellemy.CQRS.UnitTests.csproj
+++ b/Tests/Ellemy.CQRS.UnitTests/Ellemy.CQRS.UnitTests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{77B35B1C-85E4-419E-A36B-C5652F830A9B}</ProjectGuid>
+    <ProjectGuid>{DEA70EF7-10CE-4163-8EFB-E41E0F33080D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ellemy.CQRS.Example</RootNamespace>
-    <AssemblyName>Ellemy.CQRS.Example</AssemblyName>
+    <RootNamespace>Ellemy.CQRS.UnitTests</RootNamespace>
+    <AssemblyName>Ellemy.CQRS.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,22 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CreateMessage.cs" />
-    <Compile Include="Commands\CreateMessageHandler.cs" />
-    <Compile Include="Domain\ Message.cs" />
-    <Compile Include="Events\MessageTextChanged.cs" />
-    <Compile Include="Events\MessageCreated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query\AllMessages.cs" />
-    <Compile Include="Query\IRepository.cs" />
-    <Compile Include="Query\MessageReadModel.cs" />
-    <Compile Include="Query\MessageReadModelWriter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Source\Ellemy.CQRS\Ellemy.CQRS.csproj">
-      <Project>{D000DC1E-9BDC-4EC8-A1A1-D596B41DD6B9}</Project>
-      <Name>Ellemy.CQRS</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
