--- a/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
+++ b/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Event\IDomainEventHandler.cs" />
     <Compile Include="Event\IEventPublisher.cs" />
     <Compile Include="Event\IHandlerFactory.cs" />
+    <Compile Include="Event\NoOpPublisher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\IQuery.cs" />
   </ItemGroup>
