--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Extensions\Ellemy.CQRS.Implementations.StructureMap\packages.config" />
   <repository path="..\Source\Ellemy.Mvc\packages.config" />
+  <repository path="..\Extensions\NServiceBusPublisher\packages.config" />
 </repositories>
