--- a/Extensions/NServiceBusPublisher/NServiceBusPublisher.csproj
+++ b/Extensions/NServiceBusPublisher/NServiceBusPublisher.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationExtensions.cs" />
-    <Compile Include="IEventMessage.cs" />
+    <Compile Include="DomainEventMessage.cs" />
     <Compile Include="NServiceBusPublisher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
