--- a/Ellemy.CQRS.Example.Web/Web.config
+++ b/Ellemy.CQRS.Example.Web/Web.config
@@ -5,11 +5,26 @@
   -->
 
 <configuration>
+  <configSections>
+    <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core"/>
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+  </configSections>
   <appSettings>
     <add key="ClientValidationEnabled" value="true"/> 
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/> 
   </appSettings>
-    
+  
+  <!-- 1. In order to configure remote endpoints use the format: "queue@machine" 
+       2. Input queue must be on the same machine as the process feeding off of it.
+       3. Error queue can (and often should) be on a different machine.
+       4. The community edition doesn't support more than one worker thread.
+  -->
+  <MsmqTransportConfig InputQueue="MyWebClient" ErrorQueue="error" NumberOfWorkerThreads="1" MaxRetries="5"/>
+  <UnicastBusConfig>
+    <MessageEndpointMappings>
+      <add Messages="NServiceBusPublisher" Endpoint="MyServerInputQueue"/>
+    </MessageEndpointMappings>
+  </UnicastBusConfig>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
