--- a/Ellemy.CQRS.Example.Web/Web.config
+++ b/Ellemy.CQRS.Example.Web/Web.config
@@ -22,7 +22,7 @@
   <MsmqTransportConfig InputQueue="MyWebClient" ErrorQueue="error" NumberOfWorkerThreads="1" MaxRetries="5"/>
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="NServiceBusPublisher" Endpoint="MyServerInputQueue"/>
+      <add Messages="NServiceBusPublisher.Stuff.EventMessage`1[[Ellemy.CQRS.Event.IDomainEvent, Ellemy.CQRS]],NServiceBusPublisher" Endpoint="myserverinputqueue" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <system.web>
