--- a/Example/Ellemy.CQRS.NServiceBusSubscriber/Ellemy.CQRS.NServiceBusSubscriber.csproj
+++ b/Example/Ellemy.CQRS.NServiceBusSubscriber/Ellemy.CQRS.NServiceBusSubscriber.csproj
@@ -55,14 +55,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
-    <Compile Include="MessageHandler.cs" />
     <Compile Include="PrintStuffToConsole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Extensions\NServiceBusPublisher\NServiceBusPublisher.csproj">
+    <ProjectReference Include="..\..\Extensions\NServiceBusPublisher\Ellemy.CQRS.Publishing.NServiceBus.csproj">
       <Project>{5BD50EB3-F1B3-48D7-BA97-86750AFF84D9}</Project>
-      <Name>NServiceBusPublisher</Name>
+      <Name>Ellemy.CQRS.Publishing.NServiceBus</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\Ellemy.CQRS\Ellemy.CQRS.csproj">
       <Project>{D000DC1E-9BDC-4EC8-A1A1-D596B41DD6B9}</Project>
