http://blog.elliottohara.com/2011/02/publishing-events-cause-sometimes.html

--- a/Ellemy.CQRS.Example.Web/Web.config
+++ b/Ellemy.CQRS.Example.Web/Web.config
@@ -22,7 +22,7 @@
   <MsmqTransportConfig InputQueue="MyWebClient" ErrorQueue="error" NumberOfWorkerThreads="1" MaxRetries="5"/>
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="NServiceBusPublisher.Stuff.EventMessage`1[[Ellemy.CQRS.Event.IDomainEvent, Ellemy.CQRS]],NServiceBusPublisher" Endpoint="myserverinputqueue" />
+      <add Messages="Ellemy.CQRS.Publishing.NServiceBus.EventMessage`1[[Ellemy.CQRS.Event.IDomainEvent, Ellemy.CQRS]],Ellemy.CQRS.Publishing.NServiceBus" Endpoint="myserverinputqueue" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <system.web>
