--- a/Ellemy.CQRS.Example.Web/Ellemy.CQRS.Example.Web.csproj
+++ b/Ellemy.CQRS.Example.Web/Ellemy.CQRS.Example.Web.csproj
@@ -138,6 +138,10 @@
       <Project>{B8E27524-C377-4EBF-9A3D-3BEC6F6BA573}</Project>
       <Name>Ellemy.CQRS.Implementations.StructureMap</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Extensions\Ellemy.CQRS.Publishing.AmazonSns\Ellemy.CQRS.Publishing.AmazonSns.csproj">
+      <Project>{A44A393D-6E84-432B-9CA0-2F0211B74BFA}</Project>
+      <Name>Ellemy.CQRS.Publishing.AmazonSns</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Extensions\NServiceBusPublisher\Ellemy.CQRS.Publishing.NServiceBus.csproj">
       <Project>{5BD50EB3-F1B3-48D7-BA97-86750AFF84D9}</Project>
       <Name>Ellemy.CQRS.Publishing.NServiceBus</Name>
