--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Extensions\Ellemy.CQRS.Implementations.StructureMap\packages.config" />
   <repository path="..\Source\Ellemy.Mvc\packages.config" />
   <repository path="..\Extensions\NServiceBusPublisher\packages.config" />
+  <repository path="..\Example\Ellemy.CQRS.AmazonSubscriber\packages.config" />
 </repositories>
