--- a/Extensions/Ellemy.CQRS.Publishing.AmazonSns/Ellemy.CQRS.Publishing.AmazonSns.csproj
+++ b/Extensions/Ellemy.CQRS.Publishing.AmazonSns/Ellemy.CQRS.Publishing.AmazonSns.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AmazonSqsSubscriber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueManager.cs" />
+    <Compile Include="TopicSubscriber.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Ellemy.CQRS\Ellemy.CQRS.csproj">
