--- a/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
+++ b/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web.Extensions" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\CommandDispatcher.cs" />
@@ -51,6 +52,8 @@
     <Compile Include="Event\NoOpPublisher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\IQuery.cs" />
+    <Compile Include="Serializers\EllemyJsonSerializer.cs" />
+    <Compile Include="Serializers\ISerializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
