--- a/Example/Ellemy.CQRS.AmazonSubscriber/Ellemy.CQRS.AmazonSubscriber.csproj
+++ b/Example/Ellemy.CQRS.AmazonSubscriber/Ellemy.CQRS.AmazonSubscriber.csproj
@@ -62,9 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Extensions\Ellemy.CQRS.Publishing.AmazonSns\Ellemy.CQRS.Publishing.AmazonSns.csproj">
+    <ProjectReference Include="..\..\Extensions\Ellemy.CQRS.Publishing.AmazonSns\Ellemy.CQRS.Publishing.Amazon.csproj">
       <Project>{A44A393D-6E84-432B-9CA0-2F0211B74BFA}</Project>
-      <Name>Ellemy.CQRS.Publishing.AmazonSns</Name>
+      <Name>Ellemy.CQRS.Publishing.Amazon</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\Ellemy.CQRS\Ellemy.CQRS.csproj">
       <Project>{D000DC1E-9BDC-4EC8-A1A1-D596B41DD6B9}</Project>
