--- a/Extensions/Ellemy.CQRS.Serializers.GoogleProtocolBuffersSerializer/Ellemy.CQRS.Serializers.GoogleProtocolBuffersSerializer.csproj
+++ b/Extensions/Ellemy.CQRS.Serializers.GoogleProtocolBuffersSerializer/Ellemy.CQRS.Serializers.GoogleProtocolBuffersSerializer.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProtocolBufferDataContractGenerator.cs" />
+    <Compile Include="ProtoGenerator.cs" />
     <Compile Include="Serializer.cs" />
   </ItemGroup>
   <ItemGroup>
