--- a/Extensions/Ellemy.CQRS.Implementations.StructureMap/Ellemy.CQRS.Implementations.StructureMap.csproj
+++ b/Extensions/Ellemy.CQRS.Implementations.StructureMap/Ellemy.CQRS.Implementations.StructureMap.csproj
@@ -40,6 +40,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloseCommandsConvention.cs" />
     <Compile Include="ConfigurationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructureMapBuilder.cs" />
@@ -50,13 +51,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Ellemy.CQRS\Ellemy.CQRS.csproj">
       <Project>{D000DC1E-9BDC-4EC8-A1A1-D596B41DD6B9}</Project>
-      <Name>Ellemy.CQRS</Name>
+      <Name>Ellemy.CQRS %28Ellemy.CQRS\Ellemy.CQRS%29</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exist  $(SolutionDir)\binaries\extensions\$(ProjectName) mkdir $(SolutionDir)\binaries\extensions\$(ProjectName)
-copy $(TargetDir)*   $(SolutionDir)\binaries\extensions\$(ProjectName)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
