--- a/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
+++ b/Source/Ellemy.CQRS/Ellemy.CQRS.csproj
@@ -57,7 +57,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetDir)*   $(SolutionDir)\binaries\</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
